--- a/calculadora/style.css
+++ b/calculadora/style.css
@@ -12,7 +12,7 @@
         margin: 20px;
         justify-items: baseline;
     }
-     .chartRow{
+     .linhaTabela{
         display: flex;
         gap: 10px;
         flex-direction: column;
@@ -21,13 +21,13 @@
         font-size: 22px;
     }
 
-    .charts {
+    .tabelas {
         display: flex;
         gap: 10px;
         align-items: end;
     }
 
-     .chartsRow {
+     .tabelasRow {
         display: flex;
         gap: 10px;
     }
@@ -42,12 +42,12 @@
         width: 28px;
         background-color: red;
     }
-    .blocoRowGreen {
+    .blocoLinhaVerde {
         height: 33.2px;
         width: 562px;
         background-color: green;
     }
-    .blocoRowRed {
+    .blocoLinhaVermelho {
         height: 33.2px;
         width: 449.6px;
         background-color: red;
@@ -60,7 +60,7 @@
         justify-items: center;
     }
 
-     .dataRow {
+     .dataLinha {
         display: flex;
         flex-direction: row;
     }
@@ -78,7 +78,7 @@
         align-items: end;
     }
 
-     .columnRow {
+     .colunaLinha {
         display: flex;
         flex-direction: column;
         padding-bottom: 55px;
@@ -180,14 +180,14 @@
         background-color: black;
     }
 
-    .halfline {
+    .metade_linha {
         width: 50%;
         height: 2px;
         background-color: black;
         margin-left: 5px;
     }
 
-    .container_line {
+    .container_linha {
         display: flex;
         width: 100%;
         margin: 10px;
